@@ -1,6 +1,7 @@
 {{$NEXT}}
   - Generate CONTRIBUTING.md in build and copy from build to root
-  - Add basic bundle tests
+  - Add basic bundle and minter tests
+  - Add perl 5.24 to travis config in minting profile
 
 0.024     2016-05-02 14:25:27 EDT
   - Use Module::Metadata as the version_extractor for Test::ReportPrereqs if
